# glass

./: .gitignore  CMakeLists.txt  NOISE_SPEC.md  README.md  WAVELET_NORM_FIX_PLAN.md  all_wave_runs.sh  all_wave_runs_coarse.sh  build-linux.sh  build.sh  compute_sgwb_response.ipynb  fft_norm_debug.py  fft_wavelet_comparison.ipynb  full_fft_wdm_psd_test.py  mojito_noise_comparison.ipynb  noise_plotting.ipynb  noise_plotting_wavelet.ipynb  notes_to_self.md  pyproject.toml  runs_wavelet_fourier_comparison.sh  test_coarse_wave_noise.sh  test_mojito_noise.sh  test_noise.sh  test_runs.sh  test_wave_noise.sh  test_wavegb.sh  verify_cd1l_noise.py  wdm_unequal_noise.py
apps/etc/: run_mbh.sh  run_ucb.sh  run_ucb_wavelet.sh  test_suite.ipynb  test_suite.sh
apps/src/: CMakeLists.txt  fft_wdm_unit_tests.c  mbh_fisher.c  mbh_likelihood_test.c  mbh_mcmc.c  mbh_waveform_benchmark.c  noise_likelihood_benchmarks.c  noise_mcmc.c  noise_spline_mcmc.c  noise_wavelet_mcmc.c  noise_wavelet_mcmc_coarse.c  spline_benchmark.c  ucb_catalog.c  ucb_likelihood_test.c  ucb_match.c  ucb_mcmc.c  ucb_reconstruction.c  ucb_waveform_benchmark.c  ucb_wavelet_mcmc.c  vgb_mcmc.c  wavelet_test.c
globalfit/src/: CMakeLists.txt  glass_noise_wrapper.c  glass_ucb_wrapper.c  glass_vgb_wrapper.c  globalfit.c
mbh/src/: CMakeLists.txt  glass_mbh.h  glass_mbh_data.c  glass_mbh_data.h  glass_mbh_io.c  glass_mbh_io.h  glass_mbh_model.c  glass_mbh_model.h  glass_mbh_prior.c  glass_mbh_prior.h  glass_mbh_proposal.c  glass_mbh_proposal.h  glass_mbh_sampler.c  glass_mbh_sampler.h  glass_mbh_waveform.c  glass_mbh_waveform.h
noise/src/: glass_noise_io.c  glass_noise_io.h  glass_noise_model.c  glass_noise_model.h  glass_noise_sampler.c  glass_noise_sampler.h
ucb/src/: CMakeLists.txt  glass_ucb.h  glass_ucb_data.c  glass_ucb_data.h  glass_ucb_fstatistic.c  glass_ucb_io.c  glass_ucb_io.h  glass_ucb_model.c  glass_ucb_model.h  glass_ucb_prior.c  glass_ucb_prior.h  glass_ucb_proposal.c  glass_ucb_proposal.h  glass_ucb_residual.c  glass_ucb_sampler.c  glass_ucb_sampler.h  glass_ucb_waveform.c  glass_ucb_waveform.h
utils/src/: CMakeLists.txt  gitversion.h  glass_catalog.c  glass_catalog.h  glass_constants.h  glass_data.c  glass_data.h  glass_galaxy.c  glass_galaxy.h  glass_lisa.c  glass_lisa.h  glass_math.c  glass_math.h  glass_model.c  glass_model.h  glass_sampler.c  glass_sampler.h  glass_utils.c  glass_utils.h  glass_wavelet.c  glass_wavelet.h
