[project]
name = "ldasoft"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "corner>=2.2.3",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "snakebar>=0.1.1",
    "wdmwavelettransforms>=0.0.1",
]
