# add library
include_directories ("${PROJECT_SOURCE_DIR}/external")
include_directories ("${PROJECT_SOURCE_DIR}/utils/src/")
include_directories ("${PROJECT_SOURCE_DIR}/ucb/src/")
include_directories ("${PROJECT_SOURCE_DIR}/noise/src/")
include_directories ("${PROJECT_SOURCE_DIR}/mbh/src/")
include_directories(SYSTEM ${HDF5_INCLUDE_DIRS})
include_directories(SYSTEM ${GSL_INCLUDE_DIRS})


add_executable(gaussian_mixture_model gaussian_mixture_model.c)
target_link_libraries(gaussian_mixture_model glass)
if(APPLE)
   target_link_libraries(gaussian_mixture_model OpenMP::OpenMP_C)
endif()
target_link_libraries(gaussian_mixture_model ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(gaussian_mixture_model ${HDF5_LIBRARIES})
target_link_libraries(gaussian_mixture_model m)
install(TARGETS gaussian_mixture_model DESTINATION bin)

add_executable(ucb_mcmc ucb_mcmc.c)
target_link_libraries(ucb_mcmc glass)
if(APPLE)
   target_link_libraries(ucb_mcmc OpenMP::OpenMP_C)
endif()
target_link_libraries(ucb_mcmc ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(ucb_mcmc ${HDF5_LIBRARIES})
target_link_libraries(ucb_mcmc m)
install(TARGETS ucb_mcmc DESTINATION bin)

add_executable(ucb_wavelet_mcmc ucb_wavelet_mcmc.c)
target_link_libraries(ucb_wavelet_mcmc glass)
if(APPLE)
   target_link_libraries(ucb_wavelet_mcmc OpenMP::OpenMP_C)
endif()
target_link_libraries(ucb_wavelet_mcmc ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(ucb_wavelet_mcmc ${HDF5_LIBRARIES})
target_link_libraries(ucb_wavelet_mcmc m)
install(TARGETS ucb_wavelet_mcmc DESTINATION bin)

add_executable(ucb_catalog ucb_catalog.c)
target_link_libraries(ucb_catalog glass)
if(APPLE)
   target_link_libraries(ucb_catalog OpenMP::OpenMP_C)
endif()
target_link_libraries(ucb_catalog ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(ucb_catalog ${HDF5_LIBRARIES})
target_link_libraries(ucb_catalog m)
install(TARGETS ucb_catalog DESTINATION bin)

add_executable(ucb_reconstruction ucb_reconstruction.c)
target_link_libraries(ucb_reconstruction glass)
if(APPLE)
   target_link_libraries(ucb_reconstruction OpenMP::OpenMP_C)
endif()
target_link_libraries(ucb_reconstruction ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(ucb_reconstruction ${HDF5_LIBRARIES})
target_link_libraries(ucb_reconstruction m)
install(TARGETS ucb_reconstruction DESTINATION bin)

add_executable(ucb_match ucb_match.c)
target_link_libraries(ucb_match glass)
if(APPLE)
   target_link_libraries(ucb_match OpenMP::OpenMP_C)
endif()
target_link_libraries(ucb_match ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(ucb_match ${HDF5_LIBRARIES})
target_link_libraries(ucb_match m)
install(TARGETS ucb_match DESTINATION bin)

add_executable(ucb_chirpmass ucb_chirpmass.c)
target_link_libraries(ucb_chirpmass glass)
if(APPLE)
   target_link_libraries(ucb_chirpmass OpenMP::OpenMP_C)
endif()
target_link_libraries(ucb_chirpmass ${HDF5_LIBRARIES})
target_link_libraries(ucb_chirpmass m)
install(TARGETS ucb_chirpmass DESTINATION bin)

add_executable(vgb_mcmc vgb_mcmc.c)
target_link_libraries(vgb_mcmc glass)
if(APPLE)
   target_link_libraries(vgb_mcmc OpenMP::OpenMP_C)
endif()
target_link_libraries(vgb_mcmc ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(vgb_mcmc ${HDF5_LIBRARIES})
target_link_libraries(vgb_mcmc m)
install(TARGETS vgb_mcmc DESTINATION bin)

add_executable(noise_mcmc noise_mcmc.c)
target_link_libraries(noise_mcmc glass)
if(APPLE)
   target_link_libraries(noise_mcmc OpenMP::OpenMP_C)
endif()
target_link_libraries(noise_mcmc ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(noise_mcmc ${HDF5_LIBRARIES})
target_link_libraries(noise_mcmc m)
install(TARGETS noise_mcmc DESTINATION bin)


add_executable(noise_wavelet_mcmc noise_wavelet_mcmc.c)
target_link_libraries(noise_wavelet_mcmc glass)
if(APPLE)
   target_link_libraries(noise_wavelet_mcmc OpenMP::OpenMP_C)
endif()
target_link_libraries(noise_wavelet_mcmc ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(noise_wavelet_mcmc ${HDF5_LIBRARIES})
target_link_libraries(noise_wavelet_mcmc m)
install(TARGETS noise_wavelet_mcmc DESTINATION bin)

add_executable(noise_wavelet_mcmc_coarse noise_wavelet_mcmc_coarse.c)
target_link_libraries(noise_wavelet_mcmc_coarse glass)
if(APPLE)
   target_link_libraries(noise_wavelet_mcmc_coarse OpenMP::OpenMP_C)
endif()
target_link_libraries(noise_wavelet_mcmc_coarse ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(noise_wavelet_mcmc_coarse ${HDF5_LIBRARIES})
target_link_libraries(noise_wavelet_mcmc_coarse m)
install(TARGETS noise_wavelet_mcmc_coarse DESTINATION bin)

add_executable(noise_spline_mcmc noise_spline_mcmc.c)
target_link_libraries(noise_spline_mcmc glass)
if(APPLE)
   target_link_libraries(noise_spline_mcmc OpenMP::OpenMP_C)
endif()
target_link_libraries(noise_spline_mcmc ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(noise_spline_mcmc ${HDF5_LIBRARIES})
target_link_libraries(noise_spline_mcmc m)
install(TARGETS noise_spline_mcmc DESTINATION bin)

add_executable(ucb_grid ucb_grid.c)
target_link_libraries(ucb_grid glass)
if(APPLE)
   target_link_libraries(ucb_grid OpenMP::OpenMP_C)
endif()
target_link_libraries(ucb_grid ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(ucb_grid ${HDF5_LIBRARIES})
target_link_libraries(ucb_grid m)
install(TARGETS ucb_grid DESTINATION bin)

add_executable(ucb_waveform_benchmark ucb_waveform_benchmark.c)
target_link_libraries(ucb_waveform_benchmark glass)
if(APPLE)
   target_link_libraries(ucb_waveform_benchmark OpenMP::OpenMP_C)
endif()
target_link_libraries(ucb_waveform_benchmark ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(ucb_waveform_benchmark ${HDF5_LIBRARIES})
target_link_libraries(ucb_waveform_benchmark m)
install(TARGETS ucb_waveform_benchmark DESTINATION bin)

#add_executable(ucb_likelihood_test ucb_likelihood_test.c)
#target_link_libraries(ucb_likelihood_test glass)
#if(APPLE)
#   target_link_libraries(ucb_likelihood_test omp)
#endif()
#target_link_libraries(ucb_likelihood_test ${BLAS_LIBRARIES})
#target_link_libraries(ucb_likelihood_test ${HDF5_LIBRARIES})
#target_link_libraries(ucb_likelihood_test m)
#install(TARGETS ucb_likelihood_test DESTINATION bin)

add_executable(spline_benchmark spline_benchmark.c)
target_link_libraries(spline_benchmark glass)
if(APPLE)
   target_link_libraries(spline_benchmark OpenMP::OpenMP_C)
endif()
target_link_libraries(spline_benchmark ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(spline_benchmark ${HDF5_LIBRARIES})
target_link_libraries(spline_benchmark m)
install(TARGETS spline_benchmark DESTINATION bin)

add_executable(noise_likelihood_benchmarks noise_likelihood_benchmarks.c)
target_link_libraries(noise_likelihood_benchmarks glass)
if(APPLE)
   target_link_libraries(noise_likelihood_benchmarks OpenMP::OpenMP_C)
endif()
target_link_libraries(noise_likelihood_benchmarks ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(noise_likelihood_benchmarks ${HDF5_LIBRARIES})
target_link_libraries(noise_likelihood_benchmarks m)
install(TARGETS noise_likelihood_benchmarks DESTINATION bin)

add_executable(wavelet_test wavelet_test.c)
target_link_libraries(wavelet_test glass)
if(APPLE)
   target_link_libraries(wavelet_test OpenMP::OpenMP_C)
endif()
target_link_libraries(wavelet_test ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(wavelet_test ${HDF5_LIBRARIES})
target_link_libraries(wavelet_test m)
install(TARGETS wavelet_test DESTINATION bin)

add_executable(fft_wdm_unit_tests fft_wdm_unit_tests.c)
target_link_libraries(fft_wdm_unit_tests glass)
if(APPLE)
   target_link_libraries(fft_wdm_unit_tests OpenMP::OpenMP_C)
endif()
target_link_libraries(fft_wdm_unit_tests ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
target_link_libraries(fft_wdm_unit_tests ${HDF5_LIBRARIES})
target_link_libraries(fft_wdm_unit_tests m)
install(TARGETS fft_wdm_unit_tests DESTINATION bin)

#add_executable(mbh_waveform_benchmark mbh_waveform_benchmark.c)
#target_link_libraries(mbh_waveform_benchmark glass)
#if(APPLE)
#   target_link_libraries(mbh_waveform_benchmark OpenMP::OpenMP_C)
#endif()
#target_link_libraries(mbh_waveform_benchmark ${GSL_LIBRARIES})
#target_link_libraries(mbh_waveform_benchmark ${BLAS_LIBRARIES})
#target_link_libraries(mbh_waveform_benchmark ${HDF5_LIBRARIES})
#target_link_libraries(mbh_waveform_benchmark m)
#install(TARGETS mbh_waveform_benchmark DESTINATION bin)

#add_executable(mbh_mcmc mbh_mcmc.c)
#target_link_libraries(mbh_mcmc glass)
#if(APPLE)
#   target_link_libraries(mbh_mcmc OpenMP::OpenMP_C)
#endif()
#target_link_libraries(mbh_mcmc ${BLAS_LIBRARIES})
#target_link_libraries(mbh_mcmc ${HDF5_LIBRARIES})
#target_link_libraries(mbh_mcmc ${GSL_LIBRARIES})
#target_link_libraries(mbh_mcmc m)
#install(TARGETS mbh_mcmc DESTINATION bin)
